--- a/style.css
+++ b/style.css
@@ -454,6 +454,8 @@ li.social-links a {
 }
 
 
+
+
 /*------------------------------------------------------------------
     SECTIONS
 -------------------------------------------------------------------*/
@@ -1832,7 +1834,7 @@ select.mobile-device {
     font-weight: 400;
     font-size: 20px;
     text-transform: capitalize;
-    line-height: !important;
+    line-height: 1 !important;
 }
 
 .footer {
@@ -2067,7 +2069,7 @@ select.mobile-device {
     color: #999 !important;
     margin: 0 !important;
     padding: 0 !important;
-    line-height: 1 !important:
+    line-height: 1 !important;
 }
 
 .stat-wrap p {
@@ -2076,7 +2078,7 @@ select.mobile-device {
     margin: 0;
     font-weight: 300;
     padding: 4px 0 0;
-    line-height: 1 !important:
+    line-height: 1 !important;
 }
 
 #preloader {
